--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: sans-serif;
+    line-height: 1.33;
 }
 
 #app {
@@ -10,4 +11,23 @@ body {
 
 input {
     margin: 10px;
+}
+
+.copilot-biography {
+    margin-left: 10px;
+    padding-left: 10px;
+    border-left: 3px solid #000000;
+    background: #ffffff;
+    line-height: 1.25;
+}
+
+.contact > a:link {
+    color: #000000;
+    text-decoration: none;
+}
+
+.highlight {
+    background: #f0f757;
+    color: #000000;
+    font-weight: bold;
 }
