--- a/public/style.css
+++ b/public/style.css
@@ -15,14 +15,6 @@ input {
     margin: 10px;
 }
 
-.copilot-biography {
-    margin-left: 10px;
-    padding-left: 10px;
-    border-left: 3px solid #000000;
-    background: #ffffff;
-    line-height: 1.25;
-}
-
 .contact > a:link {
     color: #000000;
     text-decoration: none;
@@ -60,6 +52,10 @@ body > footer {
 
 h2 {
     margin-top: 4rem;
+}
+
+.my-nobottom {
+    margin-bottom: 0rem!important;
 }
 
 .industry {
